#255 - Columns/Grid gap, #178 - Heading styles, #121 - Mobile h1 marquee size, #208 - embed issue (#291)
* aligned default header styles.css, reduced marquee h1 on mobile, added variant to embed block (min-height-*) etc to support default iframe mobile sizing.

* Added gap variants to grid and columns

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -5,6 +5,13 @@
   gap: 1.5rem;
 }
 
+.columns.columns-2-cols > div { gap: 3rem; }
+.columns.gap-0 > div { gap: 0; }
+.columns.gap-1 > div { gap: 1rem; }
+.columns.gap-2 > div { gap: 2rem; }
+.columns.gap-3 > div { gap: 3rem; }
+.columns.gap-4 > div { gap: 4rem; }
+
 .columns img {
   width: 100%;
 }
