--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,7 +7,8 @@ header {
   --menu-accent-orange: #ffb800;
 
     background-color: var(--light-gray);
-
+    height: var(--header-height);
+    
     nav {
       padding: 0.5rem 1rem;
       margin: 0 auto;
